[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pylhe/_version.py"
local_scheme = "no-local-version"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | .eggs
  | build
  | src/pylhe/_version.py
)/
'''

[tool.check-manifest]
ignore = [
    'examples/*',
    'tests/*',
    'docker/*',
    '.*',
    'pyproject.toml',
    'pytest.ini',
    'codecov.yml',
    'CODE_OF_CONDUCT.md',
]

[tool.isort]
profile = "black"

[tool.nbqa.config]
black = "pyproject.toml"

[tool.nbqa.mutate]
black = 1
pyupgrade = 1
isort = 1

[tool.nbqa.addopts]
pyupgrade = ["--py36-plus"]
