[metadata]
name = pylhe
version = 0.0.5
description = small package to get structured data out of Les Houches Event files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/pylhe
author = Lukas Heinrich
author_email = lukas.heinrich@cern.ch
license = Apache
license_file = LICENSE
keywords = physics lhe
project_urls =
    Source = https://github.com/scikit-hep/pylhe
    Tracker = https://github.com/scikit-hep/pylhe/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    networkx
    tex2pix
    pypdt

[options.packages.find]
where = src
