[metadata]
name = pylhe
version = 0.2.1
description = small package to get structured data out of Les Houches Event files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/pylhe
author = Lukas Heinrich, Matthew Feickert
author_email = lukas.heinrich@cern.ch, matthew.feickert@cern.ch
license = Apache
license_file = LICENSE
keywords = physics lhe
project_urls =
    Source = https://github.com/scikit-hep/pylhe
    Tracker = https://github.com/scikit-hep/pylhe/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    networkx~=2.2
    tex2pix~=0.3
    particle~=0.14
    awkward>=1.2.0
    vector>=0.8.1

[options.packages.find]
where = src

[flake8]
# E501: line too long
extend-ignore = E501
max-line-length = 88
max-complexity = 18
count = True
statistics = True
